# Rust-Spelling-Checker

./: .gitignore  Cargo.toml  Readme.md
data/dictionary/: dict.txt
src/: main.rs
src/cuda/: levenshtein_corrections_kernel.rs  suggest_corrections_kernel.cu  suggest_corrections_kernel.ptx
src/spell_check/: hash_map_look_up.rs  levenshtein_checker.rs  levenshtein_checker_bk_map.rs  precomputed_levenshtein_checker.rs  soundex_checker.rs  spell_checker.rs  wagner_fischer.rs
src/utils/: load_dictionary.rs  read_dataset.rs  tokenizer.rs
