[package]
name = "rust-spell-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.1"
levenshtein = "1.0.5"
cudarc = "0.10.0"
strsim = "0.11.0"
unicode-segmentation = "1.11.0"
regex = "1.10.3"
bk-tree = "0.5.0"
log = "0.4.20"
env_logger = "0.11.1"
rustacuda = "0.1.3"
